clusters/cl01tl/manifests/huntarr/Service-huntarr.yaml
apiVersion: v1
kind: Service
metadata:
  name: huntarr
  labels:
    app.kubernetes.io/instance: huntarr
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: huntarr
    app.kubernetes.io/service: huntarr
    helm.sh/chart: huntarr-4.5.0
  namespace: huntarr
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 9705
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: huntarr
    app.kubernetes.io/name: huntarr
