clusters/cl01tl/manifests/huntarr/HTTPRoute-http-route-huntarr.yaml
---
# Source: huntarr/templates/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-route-huntarr
  namespace: huntarr
  labels:
    app.kubernetes.io/name: http-route-huntarr
    app.kubernetes.io/instance: huntarr
    app.kubernetes.io/part-of: huntarr
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: traefik
  hostnames:
    - huntarr.alexlebens.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ''
          kind: Service
          name: huntarr
          port: 80
          weight: 100
