clusters/cl01tl/manifests/huntarr/HTTPRoute-huntarr.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: huntarr
  labels:
    app.kubernetes.io/instance: huntarr
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: huntarr
    helm.sh/chart: huntarr-4.6.2
  namespace: huntarr
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: traefik
  hostnames:
    - "huntarr.alexlebens.net"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: huntarr
          namespace: huntarr
          port: 80
          weight: 100
      matches:
        - path:
            type: PathPrefix
            value: /
